--- a/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
@@ -6862,6 +6862,7 @@ body, html{
     font-family: 'Inter', sans-serif !important;
     /* background-image: url(./libs/images/future_Banking.png); */
     /* background-size: cover; */
+    height: 100%;
 }
 .bodybg{
     background: #eeeeee;
@@ -12753,7 +12754,7 @@ padding-right: 0;
 .show-all-results-outer-wrap .data-body-sec {
     padding: 10px 20px;
     overflow: auto;
-    height: calc(100% - 100px);
+    height: calc(100% - 110px);
     z-index: 1;
     position: relative;
 }
@@ -13909,7 +13910,7 @@ button.search-button:disabled {
    .bot-actions-customize-info .info-text{
        margin-left:10px
    }
-   
+
    .structured-data-outer-wrap {
         margin-bottom: 10px;
     }
