--- a/findly-builder/src/app/components/actions/actions.component.scss
+++ b/findly-builder/src/app/components/actions/actions.component.scss
@@ -1,4 +1,26 @@
-.actions-container-comp{
+
+
+
+.mainLoadingSpinner{
+    position: absolute;
+    top: 45%;
+    left: 45%;
+    // box-shadow: 0 5px 10px 0 #e9eff5;
+    background:  transparent;
+    width: 223px;
+    height: 40px;
+    padding-top: 10px;
+    border-radius: 4px;
+    opacity: 0.95;
+    padding-left: 5px;
+    .please-wait-message {
+        position: relative;
+        color: #29293b;
+        top: -16px;
+        left: 25px;
+        font-size: 12px;
+    }  
+}.actions-container-comp{
     padding-bottom: 20px;
     border-bottom: 1px solid #EFF0F1;
     .header-title{
