--- a/findly-builder/src/app/components/usage-log/usage-log.component.scss
+++ b/findly-builder/src/app/components/usage-log/usage-log.component.scss
@@ -1,4 +1,23 @@
 .invoice-container{
+    .mainLoadingSpinner{
+        position: absolute;
+        top: 45%;
+        left: 45%;  
+        background:  transparent;
+        width: 180px;
+        height: 40px;
+        padding-top: 10px;
+        border-radius: 4px;
+        opacity: 0.95;
+        padding-left: 5px;
+        .please-wait-message {
+            position: relative;
+            color: #29293b;
+            top: -16px;
+            left: 25px;
+            font-size: 12px;
+        }  
+    }
     .header-sec {       
         display: flex;
         align-items: center;
